--- a/Sprint-HTML-Package/Sprint/css/style.css
+++ b/Sprint-HTML-Package/Sprint/css/style.css
@@ -1711,7 +1711,7 @@ footer .social_icons li a {
 	text-align: center;
 }
 .contact-us .tittle p {
-	font-style: italic;
+	/*font-style: italic;*/
 	font-size: 12px;
 	color: #bfbfbf;
 	margin-top: 10px;
